# python-sample-fastapi

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TEMPLATE.md  TODO.md  pyproject.toml
.github/workflows/: python-package.yml
config/: debug-logger.yml
docker-scripts/: dependencies.sh  entrypoint.sh  requirements.txt
docker/docker-dev/: Dockerfile  docker-compose.yml
docker/docker-prod/: .gitignore  Dockerfile  dependencies.sh  entrypoint.sh
examples/deploy/: .env.example  docker-compose.yml
examples/deploy/config/: server-logger-config.yml
sample_fastapi/: cli.py
sample_fastapi/app/: __init__.py  app_factory.py  utils.py
sample_fastapi/app/config/: __init__.py  depends.py  models.py  settings.py
sample_fastapi/app/database/: __init__.py  base.py  config.py  depends.py  engine.py  session.py
sample_fastapi/app/middleware/: __init__.py  cors.py  middleware.py
sample_fastapi/app/resources/: __init__.py  lifespan.py  routes.py
sample_fastapi/app/resources/calculator/: __init__.py  models.py  routes.py  services.py  views.py
sample_fastapi/app/resources/docker_health/: __init__.py  logging.py  models.py  routes.py  views.py
sample_fastapi/app/resources/hello/: __init__.py  models.py  routes.py  views.py
sample_fastapi/app/resources/user/: db_models.py  db_queries.py  models.py  routes.py  services.py  views.py
scripts/: dev-launch.bat  dev-launch.sh  dev-setup.bat  dev-setup.sh
tests/: __main__.py  test_app.py
tests/testclient/: test_calc.py  test_hello.py  utils.py
